@@ -210,6 +210,10 @@ Todoyu::$CONFIG['FE']['PAGE']['assets'] = array(
 			'position'	=> 65
 		),
 		array(
+			'file'		=> 'core/asset/js/FormValidator.js',
+			'position'	=> 65
+		),
+		array(
 			'file'		=> 'core/asset/js/Validate.js',
 			'position'	=> 66
 		),
